N°2847 Fix input background color on error

--- a/css/backoffice/components/input/_input.scss
+++ b/css/backoffice/components/input/_input.scss
@@ -23,7 +23,7 @@ $ibo-input--placeholder--color: $ibo-color-grey-600 !default;
 $ibo-input--disabled--background-color: $ibo-color-grey-300 !default;
 $ibo-input--placeholder--color: $ibo-color-grey-700 !default;
 
-$ibo-input-wrapper--is-error--background-color: $ibo-color-grey-300 !default;
+$ibo-input-wrapper--is-error--background-color: $ibo-color-red-200 !default;
 $ibo-input-wrapper--is-error--border-color: $ibo-color-red-600 !default;
 $ibo-field-validation: $ibo-color-red-700 !default;
 .ibo-input{
