N°2847 Fix User menu not displaying on carret click

--- a/templates/layouts/navigation-menu/layout.html.twig
+++ b/templates/layouts/navigation-menu/layout.html.twig
@@ -52,7 +52,7 @@
 						<div class="ibo-navigation-menu--user-welcome-message--text">
 							<a class="ibo-navigation-menu--user-welcome-message--toggler" data-role="ibo-navigation-menu--user-menu--toggler" href="#">
 								{{ oUIBlock.GetUserData().sWelcomeMessage }}
-								<span class="ibo-navigation-menu--user-welcome-message--toggler" data-role="ibo-navigation-menu--user-menu--toggler">
+								<span class="ibo-navigation-menu--user-welcome-message--toggler">
 									<i class="fas fa-caret-down"></i>
 								</span>
 							</a>
