--- a/css/login.css
+++ b/css/login.css
@@ -6,14 +6,13 @@ html,body {
 
 h1 {
 	color: #1C94C4;
-	font-size: 16pt;
+	font-size: 1.83rem;
 }
 
 a {
 	text-decoration: none;
 	color: #1c94c4;
 	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
-	font-size: 12px;
 }
 
 a:hover {
@@ -27,11 +26,14 @@ a:hover {
 }
 
 #login-body {
-	background: #eee;
+	background: #E1E7EC;
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	position: relative;
+	font-size: 1rem;
+	font-family: "Monorale";
+	font-weight: 500;
 }
 
 #login-header {
@@ -60,7 +62,7 @@ a:hover {
 #login-content {
 	padding: 20px;
 	background-color: #fff;
-	border: 2px solid #CBD2D9;
+	border: 2px solid #CCD4DB;
 	border-radius: 4px;
 	margin-top: 224px;
 }
@@ -97,7 +99,6 @@ a:hover {
 	width: 70%;
 	margin-left: 15%;
 	color: #37322f;
-	font-size: 12px;
 	margin-top: 10px;
 }
 
@@ -109,7 +110,7 @@ a:hover {
 	margin-left:auto;
 	margin-right:auto;
 	width:40%;
-	color: #eee;
+	color: #E1E7EC;
 }
 
 #login-form-content .divider hr.left {
@@ -123,19 +124,6 @@ a:hover {
 #login-input > div {
 	text-align: left;
 	margin-top: 10px;
-}
-
-#login-input input {
-	background-color: #fff;
-	height: 2em;
-	padding: 0.1em 1em;
-	border: solid 2px #DDD;
-	border-radius: 0.25em;
-	width: calc(100% - 2em - 4px);
-}
-
-#login-input input:focus {
-	border-color: #A0AEC0;
 }
 
 #login-additional-controls > div {
@@ -170,11 +158,11 @@ a:hover {
 }
 
 #login-submit input, #forgot_pwd_sent input{
-	background-color: #333a4b;
+	background-color: #404B5A;
 	padding: 0.1em 1em;
 	border-radius: 0.25em;
 	width: 100%;
-	color: #eee;
+	color: #E1E7EC;
 	border: 0;
 	height: 2.2em;
 	margin-top: 10px;
