N°2847 Light fix to setup style

--- a/css/setup.scss
+++ b/css/setup.scss
@@ -132,7 +132,7 @@ a{
 		margin: 0;
 	}
 }
-#setup {
+#setup, #ibo-page-container {
     width: 600px;
     margin-left: auto;
     margin-right: auto;
