--- a/templates/components/button/layout.html.twig
+++ b/templates/components/button/layout.html.twig
@@ -1,5 +1,6 @@
 <button id="{{ oUIBlock.GetId() }}"
         class="ibo-button ibo-is-{{ oUIBlock.GetActionType() }} ibo-is-{{ oUIBlock.GetColor() }} {{ oUIBlock.GetAdditionalCSSClass() }}"
+        data-role="ibo-button"
         type="{{ oUIBlock.GetType() }}"
         name="{{ oUIBlock.GetName() }}"
         value="{{ oUIBlock.GetValue() }}"
