N°2847 - Datatable modal dialogs

--- a/templates/components/form/layout.html.twig
+++ b/templates/components/form/layout.html.twig
@@ -1,6 +1,11 @@
 <form method="post" enctype="multipart/form-data" id="{{ oUIBlock.GetId() }}"
-      {% if oUIBlock.GetOnSubmitJsCode() %}onSubmit="{{ oUIBlock.GetOnSubmitJsCode() }}"{% endif %}
-        {% if oUIBlock.GetAction() %}action="{{ oUIBlock.GetAction() }}"{% endif %}>
+        {% if oUIBlock.GetOnSubmitJsCode() %}
+            onSubmit="{{ oUIBlock.GetOnSubmitJsCode() }}"
+        {% endif %}
+        {% if oUIBlock.GetAction() %}
+            action="{{ oUIBlock.GetAction() }}"
+        {% endif %}
+>
     {% apply spaceless %}
         {% block iboContentBlockContainer %}
             {% for oSubBlock in oUIBlock.GetSubBlocks() %}
